# hexlet_pytest

./: example.py  pyproject.toml
tests/: test_example.py  test_stack.py
